Feature: Add a Client Cache database

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ POSTGRES_PASSWORD=motorsporttracker
 # Postgres Client Cache
 POSTGRES_CLIENT_CACHE_NAME=client-cache
 POSTGRES_CLIENT_CACHE_EXTERNAL_PORT=6379
+POSTGRES_CLIENT_CACHE_URL=postgres://motorsporttracker:motorsporttracker@postgres-client-cache:5432/client-cache?sslmode=disable
 
 # Postgres Core
 POSTGRES_CORE_NAME=core
