Project: Use only one database container

--- a/.env
+++ b/.env
@@ -12,18 +12,11 @@ SQS_UI_PORT_EXTERNAL=9325
 # Postgres Config
 POSTGRES_VERSION=16.9
 POSTGRES_PORT=5432
+POSTGRES_EXTERNAL_PORT=6378
 POSTGRES_USER=motorsporttracker
 POSTGRES_PASSWORD=motorsporttracker
-
-# Postgres Client Cache
-POSTGRES_CLIENT_CACHE_NAME=client-cache
-POSTGRES_CLIENT_CACHE_EXTERNAL_PORT=6379
-POSTGRES_CLIENT_CACHE_URL=postgres://motorsporttracker:motorsporttracker@postgres-client-cache:5432/client-cache?sslmode=disable
-
-# Postgres Core
-POSTGRES_CORE_NAME=core
-POSTGRES_CORE_EXTERNAL_PORT=6378
-POSTGRES_CORE_URL=postgres://motorsporttracker:motorsporttracker@postgres-core:5432/core?sslmode=disable
+POSTGRES_CORE_URL=postgres://motorsporttracker:motorsporttracker@postgres:5432/core-dev?sslmode=disable
+POSTGRES_CLIENT_CACHE_URL=postgres://motorsporttracker:motorsporttracker@postgres:5432/client-cache-dev?sslmode=disable
 
 # Golang
 GOLANG_VERSION=1.24
