--- a/.env
+++ b/.env
@@ -1,13 +1,22 @@
 PROJECT=motorsport
 
+APP_ENV=dev
+
 LOG_LEVEL=DEBUG
 
 # SQS Config
+QUEUE_TYPE=sqs
 SQS_VERSION=1.6.12
 SQS_PORT=9324
 SQS_PORT_EXTERNAL=9324
 SQS_UI_PORT=9325
 SQS_UI_PORT_EXTERNAL=9325
+SQS_ENDPOINT=http://sqs:9324
+SQS_REGION=elasticmq
+SQS_ACCESS_KEY=x
+SQS_SECRET_KEY=x
+SQS_SESSION_TOKEN=
+QUEUE_SCRAPPING_INTENTS=ScrappingIntents
 
 # Postgres Config
 POSTGRES_VERSION=16.9
@@ -19,32 +28,24 @@ POSTGRES_CORE_URL=postgres://motorsporttracker:motorsporttracker@postgres:5432/c
 POSTGRES_CLIENT_CACHE_URL=postgres://motorsporttracker:motorsporttracker@postgres:5432/client-cache-dev?sslmode=disable
 
 # Golang
-GOLANG_VERSION=1.24
-QUEUE_TYPE=sqs
-SQS_ENDPOINT=http://sqs:9324
-SQS_REGION=elasticmq
-SQS_ACCESS_KEY=x
-SQS_SECRET_KEY=x
-SQS_SESSION_TOKEN=
-QUEUE_SCRAPPING_INTENTS=ScrappingIntents
+GOLANG_VERSION=1.25
 
-
-# PHP Config
-PHP_VERSION=8.3-fpm
-TIMEZONE='Europe/Paris'
-BACKEND_SERVER_PORT_EXTERNAL=8030
-BACKEND_XDEBUG_PORT_EXTERNAL=9030
-BACKOFFICE_SERVER_PORT_EXTERNAL=8040
-BACKOFFICE_XDEBUG_PORT_EXTERNAL=9040
-
-#Node Config
-NODE_VERSION=20.18.1
-ADMIN_SERVER_PORT_EXTERNAL=3040
-FRONTEND_SERVER_PORT_EXTERNAL=3030
-
-# Memcached
-MEMCACHED_VERSION=1.6
-MEMCACHED_PORT_EXTERNAL=11211
+## PHP Config
+#PHP_VERSION=8.3-fpm
+#TIMEZONE='Europe/Paris'
+#BACKEND_SERVER_PORT_EXTERNAL=8030
+#BACKEND_XDEBUG_PORT_EXTERNAL=9030
+#BACKOFFICE_SERVER_PORT_EXTERNAL=8040
+#BACKOFFICE_XDEBUG_PORT_EXTERNAL=9040
+#
+##Node Config
+#NODE_VERSION=20.18.1
+#ADMIN_SERVER_PORT_EXTERNAL=3040
+#FRONTEND_SERVER_PORT_EXTERNAL=3030
+#
+## Memcached
+#MEMCACHED_VERSION=1.6
+#MEMCACHED_PORT_EXTERNAL=11211
 
 # Composer Config
 COMPOSER_HOME=/srv/cache/composer
