Feature: Integration test for the SQS queue

--- a/.docker/sqs/1.6.12/conf/queues.conf
+++ b/.docker/sqs/1.6.12/conf/queues.conf
@@ -5,4 +5,10 @@ queues {
     defaultMessageRetentionPeriod = 345600 seconds
     delay = 0 seconds
   }
+
+  TestScrappingIntents {
+    defaultVisibilityTimeout = 60 seconds
+    defaultMessageRetentionPeriod = 3600 seconds
+    delay = 0 seconds
+  }
 }
