--- a/.env.tests
+++ b/.env.tests
@@ -1,2 +1,4 @@
 POSTGRES_CLIENT_CACHE_URL=postgres://motorsporttracker:motorsporttracker@postgres:5432/client-cache-test?sslmode=disable
 POSTGRES_CORE_URL=postgres://motorsporttracker:motorsporttracker@postgres:5432/core-test?sslmode=disable
+
+QUEUE_SCRAPPING_INTENTS=TestScrappingIntents
