Feature: Update the ServiceRegistry with the new services structure

--- a/.env
+++ b/.env
@@ -30,6 +30,9 @@ POSTGRES_CLIENT_CACHE_URL=postgres://motorsporttracker:motorsporttracker@postgre
 # Golang
 GOLANG_VERSION=1.25
 
+# Remote API
+REMOTE_API_HOST=https://api.motorsportstats.com
+
 ## PHP Config
 #PHP_VERSION=8.3-fpm
 #TIMEZONE='Europe/Paris'
