Feature: Use a FileSystem cache for local dev

--- a/.env.dev
+++ b/.env.dev
@@ -1,53 +1,55 @@
-###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=f9978f460b7d9384d6909d90becf7a71
-HOSTNAME='http://localhost:8000'
-WORKDIR='/app'
-###< symfony/framework-bundle ###
+USE_FS_CACHE=true
 
-###> Frontend ###
-FRONTEND_HOST='http://frontend:3000'
-FRONTEND_SECRET=dev
-###< Frontend ###
-
-###> JWT ###
-JWT_SECRET_KEY='@;wiiMge~SBY=.M,Kiw-B!6cf)kA[c'
-JWT_ALGORITHM='HS256'
-JWT_EXP_CLAIM_IS_REQUIRED=false
-###< JWT ###
-
-###> DB Config ###
-DB_CORE_NAME=${DB_CORE_DEV}
-DB_CORE_HOST=${DB_HOST}
-DB_CORE_PORT=${DB_PORT}
-DB_CORE_USER=${DB_USER}
-DB_CORE_PASSWORD=${DB_PASSWORD}
-DB_CACHE_NAME=${DB_CACHE_DEV}
-DB_CACHE_HOST=${DB_HOST}
-DB_CACHE_PORT=${DB_PORT}
-DB_CACHE_USER=${DB_USER}
-DB_CACHE_PASSWORD=${DB_PASSWORD}
-DB_CLIENT_NAME=${DB_CLIENT_DEV}
-DB_CLIENT_HOST=${DB_HOST}
-DB_CLIENT_PORT=${DB_PORT}
-DB_CLIENT_USER=${DB_USER}
-DB_CLIENT_PASSWORD=${DB_PASSWORD}
-DB_ADMIN_NAME=${DB_ADMIN_DEV}
-DB_ADMIN_HOST=${DB_HOST}
-DB_ADMIN_PORT=${DB_PORT}
-DB_ADMIN_USER=${DB_USER}
-DB_ADMIN_PASSWORD=${DB_PASSWORD}
-###< DB Config ###
-
-###> Memcached ###
-MEMCACHED_DSN=memcached:11211
-MEMCACHED_NAMESPACE=motorsporttracker
-###< Memcached ###
-
-###> symfony/messenger ###
-MESSENGER_TRANSPORT_DSN=sqs://sqs:9324/queue/default?sslmode=disable
-###< symfony/messenger ###
-
-###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
-###< nelmio/cors-bundle ###
+####> symfony/framework-bundle ###
+#APP_ENV=dev
+#APP_SECRET=f9978f460b7d9384d6909d90becf7a71
+#HOSTNAME='http://localhost:8000'
+#WORKDIR='/app'
+####< symfony/framework-bundle ###
+#
+####> Frontend ###
+#FRONTEND_HOST='http://frontend:3000'
+#FRONTEND_SECRET=dev
+####< Frontend ###
+#
+####> JWT ###
+#JWT_SECRET_KEY='@;wiiMge~SBY=.M,Kiw-B!6cf)kA[c'
+#JWT_ALGORITHM='HS256'
+#JWT_EXP_CLAIM_IS_REQUIRED=false
+####< JWT ###
+#
+####> DB Config ###
+#DB_CORE_NAME=${DB_CORE_DEV}
+#DB_CORE_HOST=${DB_HOST}
+#DB_CORE_PORT=${DB_PORT}
+#DB_CORE_USER=${DB_USER}
+#DB_CORE_PASSWORD=${DB_PASSWORD}
+#DB_CACHE_NAME=${DB_CACHE_DEV}
+#DB_CACHE_HOST=${DB_HOST}
+#DB_CACHE_PORT=${DB_PORT}
+#DB_CACHE_USER=${DB_USER}
+#DB_CACHE_PASSWORD=${DB_PASSWORD}
+#DB_CLIENT_NAME=${DB_CLIENT_DEV}
+#DB_CLIENT_HOST=${DB_HOST}
+#DB_CLIENT_PORT=${DB_PORT}
+#DB_CLIENT_USER=${DB_USER}
+#DB_CLIENT_PASSWORD=${DB_PASSWORD}
+#DB_ADMIN_NAME=${DB_ADMIN_DEV}
+#DB_ADMIN_HOST=${DB_HOST}
+#DB_ADMIN_PORT=${DB_PORT}
+#DB_ADMIN_USER=${DB_USER}
+#DB_ADMIN_PASSWORD=${DB_PASSWORD}
+####< DB Config ###
+#
+####> Memcached ###
+#MEMCACHED_DSN=memcached:11211
+#MEMCACHED_NAMESPACE=motorsporttracker
+####< Memcached ###
+#
+####> symfony/messenger ###
+#MESSENGER_TRANSPORT_DSN=sqs://sqs:9324/queue/default?sslmode=disable
+####< symfony/messenger ###
+#
+####> nelmio/cors-bundle ###
+#CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+####< nelmio/cors-bundle ###
